# Generalised_Random_Forest_Methods

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg
paper/: generalised_random_forest_methods.tex  generalised_random_forest_methods_pres.tex  refs.bib  tak_paper.py  task_paper.py
src/generalised_random_forest_methods/: config.py
src/generalised_random_forest_methods/analysis/: model.py  tak_analysis.py  task_analysis.py
src/generalised_random_forest_methods/data_management/: __init__.py  causal_IV2.ipynb  causal_IV_forest.ipynb  causal_forest.ipynb  clean_data.py  data_info.yaml  task_data_management.py
src/generalised_random_forest_methods/final/: __init__.py  plot.py  tak_final.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: data_fixture.csv  data_info_fixture.yaml  test_clean_data.py
